--- a/TymeBoxed/TymeBoxed.entitlements
+++ b/TymeBoxed/TymeBoxed.entitlements
@@ -16,7 +16,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.dev.ambitionsoftware.timeboxed</string>
+		<string>group.dev.ambitionsoftware.tymeboxed</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
