Ui chnage nfc to tymeBoxed

--- a/TymeBoxed/Info.plist
+++ b/TymeBoxed/Info.plist
@@ -5,6 +5,7 @@
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string>com.timeboxed.backgroundprocessing</string>
+		<string>com.timeboxed.pauseendrecovery</string>
 	</array>
 	<key>CFBundleIconName</key>
 	<string>AppIcon</string>
